# dbent

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
dbent-derive/: Cargo.toml  README.md
dbent-derive/src/: lib.rs  tests.rs
dbent-derive/tests/ui/: entity_key_not_first.rs  entity_key_not_first.stderr  entity_label_multiple_labels.rs  entity_label_multiple_labels.stderr  entity_label_no_attr.rs  entity_label_no_attr.stderr  entity_label_no_struct.rs  entity_label_no_struct.stderr  entity_label_struct_unit.rs  entity_label_struct_unit.stderr  entity_label_struct_unnamed_fields.rs  entity_label_struct_unnamed_fields.stderr  entity_no_key.rs  entity_no_key.stderr  entity_no_struct.rs  entity_no_struct.stderr  entity_struct_unit.rs  entity_struct_unit.stderr  entity_struct_unnamed_fields.rs  entity_struct_unnamed_fields.stderr
src/: lib.rs  tests.rs
