[package]
name = "dbent-derive"
version = "0.1.0"
authors = ["Hilton Medeiros"]
edition = "2021"
description = "Dbent procedural macros"
repository = "https://github.com/hiltonm/dbent"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }

[dev-dependencies]
trybuild = "1"
dbent = { path = ".." }
